2003-02-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc16.tcl: Fixed a bug in the option handling error info.

2003-01-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.tcl: 
	* cksum.tcl:
	* crc16.tcl:
	* sum.tcl: Added tcl package requirement for 8.2+ and hiked
	versions to 1.0.1

2003-01-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* crc32.man: More semantic markup, less visual one.
	* cksum.man:
	* sum.man:

2003-01-07  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.test: Fixed another 8.3 - 8.4 wide integer problem.

2003-01-06  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc16.tcl: Fix for bug #620612: the crc16 CRC calculation failed
	for 32 bit CRC widths for tcl < 8.4. Masked off high bits after shift

2003-01-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* cksum.tcl: Enabled processing in chunks to reduce memory
	consumption.

2002-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.tcl: Fix to SF bug #579026: implementing file processing
	in small chunks to reduce memory usage.

2002-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc16.tcl, crc16.test, crc16.man: Added CRC16 package

2002-01-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.test, sum.test, cksum.test: Fixed SF bug #507242: failing
	tests when running 'make test'

2002-01-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.n: formatting fixes
	* sum.n: added new manual page for package sum

2002-01-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* crc32.tcl: added -seed and -implementation options.
	* crc32.n: updated for the -seed and -impl options
	* crc32.test: added tests for the -seed and -impl options.

2002-01-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sum.tcl: initial version of crc::sum command
	* sum.test: initial version of crc::sum command tests
	* cksum.tcl: intial version of crc::cksum command
	* cksum.n: initial version of crc::cksum manual page