@@ -1,4 +1,5 @@
 [manpage_begin cksum n 1.0.1]
+[copyright {2002, Pat Thoyts}]
 [moddesc   {cksum}]
 [titledesc {calculate a cksum(1) compatible checksum}]
 [require Tcl 8.2]
