@@ -1,4 +1,5 @@
 [manpage_begin crc32 n 1.0.1]
+[copyright {2002, Pat Thoyts}]
 [moddesc   {Cyclic Redundancy Check (crc32)}]
 [titledesc {Perform a 32bit Cyclic Redundancy Check}]
 [require Tcl 8.2]
